[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=2]
[ext_resource path="res://SSAA.gd" type="Script" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ViewportOuterContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
script = ExtResource( 3 )

[node name="ViewportOuter" type="Viewport" parent="ViewportOuterContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
usage = 1
render_target_update_mode = 3

[node name="ViewportInnerContainer" type="ViewportContainer" parent="ViewportOuterContainer/ViewportOuter"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="ViewportInner" type="Viewport" parent="ViewportOuterContainer/ViewportOuter/ViewportInnerContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
usage = 3
render_target_update_mode = 3
shadow_atlas_size = 4096

[node name="Spatial" parent="ViewportOuterContainer/ViewportOuter/ViewportInnerContainer/ViewportInner" instance=ExtResource( 1 )]

[node name="FPS" type="Label" parent="."]
anchor_right = 0.5
margin_left = 20.0
margin_top = 20.0
text = "FPS: 60.0"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Commit" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 1.0
margin_top = 20.0
margin_right = -20.0
text = "COMMIT"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
